@@ -8,13 +8,11 @@ CONTRACT_TYPE:NEEDS[SCANsat]
     synopsis = [content]
     completedMessage = You have done it!
 
-    // Controls for whether a contract can be declined or cancelled, default is true for both
-    cancellable = false
-    declinable = false
-
     // Target Celestial body - controls where the contract must be completed, has some automated
     // effects on numeric parameters (increasing science, etc.)
     targetBody = Kerbin
+
+    maxSimultaneous = 1
 
     // Contract rewards
     rewardScience = 5000.0
