@@ -1,6 +1,7 @@
 Contract Configurator 0.6.0
 - Added SpawnVessel behaviour.
 - Add situation filter to Orbit parameter.
+- SCANsat coverage parameter now displays the current scan percentage.
 - Fix display of year/years and day/days in time based parameters (thanks DBT85).
 - Fix to how contract expiry is handled - setting to 0.0 will now give a contract that never expires, similar to the way the deadline works.
 - Remove parameters that have been obsolete since Contract Configurator 0.5.0.
